[tool.poetry]
name = "fastapi-referral"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cashews = {extras = ["redis"], version = "^7.0.2"}
httpx = "^0.27.0"
black = "^24.2.0"
isort = "^5.13.2"
ruff = "^0.3.2"
mypy = "^1.9.0"
pre-commit = "^3.6.2"

[tool.black]
line-length = 120
extend-exclude = "migrations"

[tool.isort]
profile = "black"
line_length = 120
extend_skip = [".gitignore", ".dockerignore", ".env", ".env.*", "migrations"]

[tool.ruff]
line-length = 120
exclude = ["migrations"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
